objects/Contract.object
<CustomObject>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NS_Rif__c</fullName>
        <label>NS. Rif.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_BillingSyncronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF_BillingSyncronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Contract_Code__c</fullName>
        <label>OF_Contract_Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OF_EsistenzaServizio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EsistenzaServizio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_IdContratto__c</fullName>
        <label>Id Contratto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Rinnovabile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinnovabile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_TermPayment__c</fullName>
        <label>TermPayment</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Servizio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servizio</label>
        <referenceTo>OF_Servizio__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SuspendedDate__c</fullName>
        <label>SuspendedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SyncBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SyncBilling</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <role>BO_Analisi</role>
            <role>BO_Collaudo</role>
            <role>BO_OnField</role>
            <role>CQS_Responsabile_Lavori_Nord</role>
            <role>CQS_Responsabile_Lavori_Sud</role>
            <role>CQS_Responsabile_Territoriale_Centro</role>
            <role>CQS_Responsabile_Territoriale_Nord</role>
            <role>CQS_Responsabile_Territoriale_Sud</role>
            <role>Direzione</role>
            <role>OF_CQS_Responsabile_Lavori_Centro</role>
            <role>Operatore_BO</role>
            <role>Operatore_OM</role>
            <role>Operatore_Tecnico</role>
            <role>Responsabile_BO</role>
            <role>Responsabile_TTM</role>
            <role>Responsabile_Tecnico</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>OF_IdContratto__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <role>BO_Analisi</role>
            <role>BO_Collaudo</role>
            <role>BO_OnField</role>
            <role>CQS_Responsabile_Lavori_Nord</role>
            <role>CQS_Responsabile_Lavori_Sud</role>
            <role>CQS_Responsabile_Territoriale_Centro</role>
            <role>CQS_Responsabile_Territoriale_Nord</role>
            <role>CQS_Responsabile_Territoriale_Sud</role>
            <role>Direzione</role>
            <role>OF_CQS_Responsabile_Lavori_Centro</role>
            <role>Operatore_BO</role>
            <role>Operatore_OM</role>
            <role>Operatore_Tecnico</role>
            <role>Responsabile_BO</role>
            <role>Responsabile_TTM</role>
            <role>Responsabile_Tecnico</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Direzione</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Accordo_Quadro</fullName>
        <active>true</active>
        <label>Accordo Quadro</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>DisableChangeBillingFrequency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   ISPICKVAL( Status, &quot;Attivo&quot;),
ISCHANGED(BillingFrequency__c) 
				)</errorConditionFormula>
        <errorDisplayField>BillingFrequency__c</errorDisplayField>
        <errorMessage>Non è possibile modificare il campo Billing Frequency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DisableChangeOLO</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   ISPICKVAL( Status, &quot;Attivo&quot;),
  ISCHANGED(AccountId) 
				)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Non è possibile modificare il campo Account</errorMessage>
    </validationRules>
</CustomObject>